<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <Button
        android:id="@+id/comm_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_home"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <Button
        android:id="@+id/comm_btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/common_jog_cw"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/comm_btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/comm_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/common_jog_ccw"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/comm_btn_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <Button
        android:id="@+id/comm_btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/common_chome"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comm_btn_1"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/comm_btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/common_pos_clr"
        android:layout_marginLeft="10dp"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/comm_btn_4"
        app:layout_constraintTop_toBottomOf="@id/comm_btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/comm_btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/common_reset"
        android:layout_marginRight="10dp"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/comm_btn_4"
        app:layout_constraintTop_toBottomOf="@id/comm_btn_2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--
    <Button
        android:id="@+id/comm_btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/common_jog_cw"
        />
    <Button
        android:id="@+id/comm_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/common_home"
        />
    <Button
        android:id="@+id/comm_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/common_jog_ccw"
        />
        -->

</androidx.constraintlayout.widget.ConstraintLayout>